committed message